# gfs-wind-downloader

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml  flake.nix  process_wind_data.py  pyproject.toml
src/: grib.rs  main.rs  s3.rs
